--- a/myweb.yaml
+++ b/myweb.yaml
@@ -16,7 +16,7 @@ spec:
         app: myweb
     spec:
       containers:
-      - image: sunitparekh/playjenkins:latest
+      - image: princewadhwa70/playjenkins:latest
         imagePullPolicy: Always
         name: myweb
 ---
